test/runnable/imports/stacktrace1.d
module stacktrace1;

extern(C++) void func() {}
