test/fail_compilation/fail66.d

class C
{
    const int y;

    this()
    {
    }
}
